--- a/Login/style.css
+++ b/Login/style.css
@@ -1,72 +1,2 @@
-
-form
-	{
-		box-sizing:		border-box;
-		margin-left:auto;
-		margin-right:auto;
-		width:500px;
-		border: double;
-		padding: 8px;
-		font-family: "b koodak";
-		
-	}	
-body
-	{
-		padding:		1em;
-		margin-left:auto;
-		margin-right:auto;
-		width:500px;
-		
-		
-	}
-:lang(fa)
-	{
-		direction: rtl;
-		
-	}
-input,textarea,label
-	{
-		width: 30%;
-		
-				
-	}
-textarea
-	{
-		height: 6em;
-	}
-.btn
-	{
-		border-radius:	20px; 
-		height:			36px;
-		margin:			8px 0px 0px 8px; 
-		min-width:		64dp;	
-		padding:		0px 16px 0px 16px;
-	}
-.btn *
-	{
-		vertical-align:	middle;
-		
-			
-	}	
-.btn-contained.primary
-	{
-		border: none;
-		background-color:	#99ff99;
-		color:				white;
-		font-weight:        bold;*/  /* just in case*/
-	}
-
-.btn-contained.secondary
-	{
-		border: none;
-		background-color:	#ff6666;
-		color:				white;
-		font-weight:        bold;*/  /* just in case*/
-	}
-
-.btn i
-	{
-		font-size:		18px;
-	}
-			
-		
+@import url("components.css");
+@import url("main.css");
