--- a/Login/button.css
+++ b/Login/button.css
@@ -35,15 +35,15 @@
 	}
 
 a.btn
-	{
+{
 		text-decoration: none;
 
-	}
+}
 
 
 .btn-text
 {
-color:  #6750A4;
+color:  #3911a7;
 background: none;
 padding:		0 12px;	
 }
