--- a/register/button.css
+++ b/register/button.css
@@ -1,17 +1,15 @@
 .btn
 	{
-		min-width:		 200px;
-		max-width: 		 100%;
-		width: 100%;
-		padding:		0px 100px;
+		min-width:		64px;	
+		max-width: 		100%;
+		padding:		0px 24px;
 
 		border:			1px solid transparent;
 		border-radius:	20px; 
 		height:			40px;
+		margin:			8px ;
 
-		margin-left:auto;
-		margin-right:auto;
-		display: flex;
+		display:		inline-block;
 		text-align:     center;
 		vertical-align:	middle;
 		font-size:		20px;
@@ -34,19 +32,18 @@
 .btn * 
 	{
 		vertical-align: middle;
-
 	}
 
 a.btn
-{
+	{
 		text-decoration: none;
 
-}
+	}
 
 
 .btn-text
 {
-color:  #3911a7;
+color:  #6750A4;
 background: none;
 padding:		0 12px;	
 }
@@ -54,7 +51,7 @@ padding:		0 12px;
 {
 border: 2px solid ;
 border-color: #74767e;
-color:   #4016b4;
+color:   #6750A4;
 background: none;
 }
 .btn-filled
