--- a/register/main.css
+++ b/register/main.css
@@ -5,35 +5,33 @@
        line-height: 1.6;
        font-family: "B Koodak";
        outline: none;
-   }	
-   form
-	{
-        background-color: whitesmoke;
-		box-sizing:		border-box;
-		margin-left:auto;
-		margin-right:auto;
-		width:300px;
-        border-radius: 20px;
-		padding: 8px;
-		font-family: "b koodak";
-	}	
-
-body
+       margin-left:auto;
+       margin-right:auto;
+   }
+   body
     {
-        background-image: url("bg1.jpg");
         padding:		1em;
-        margin-left:auto;
-        margin-right:auto;
         width:300px;
         background-color: #cccccc;
-
     }
-html
+    html
    {
        padding:		1em;
        font-size: 		16px;
       
    }
+   form
+	{
+        background-color: whitesmoke;
+		box-sizing:		border-box;
+		width:300px;
+        border-radius:	20px; 
+		padding: 1em;
+		font-family: "b koodak";
+        font-size: 		16px;
+		
+	}	
+
 :lang(fa)
    {
        direction: rtl;
@@ -53,28 +51,27 @@ input,textarea,button,label
        border:		 1px solid transparent;
        border-radius:	25px; 
        font-size:		20px;
-       margin:       16px 8px;
+       margin: 8px 8px 8px 8px;
        min-width:		 200px;
        max-width: 		 100%;
        width: 90%;
                
    }
-   label
-   {
-
-    margin: 0 58px;
-   }
    input
    {
-      background-color: silver; 
+       background-color: silver;
+   }
+   h2
+   {
+       text-align: center;
+       padding:		 0 40px;
    }
 textarea
    {
        height: 6em;
    }
    
-
-
+	
 
 		
 
