--- a/home/Card.css
+++ b/home/Card.css
@@ -9,7 +9,6 @@
 }
 
 .card{
-    width:		25%;
 	background:	#E7E0EC;
     border: none;
     margin: 8px;
@@ -29,7 +28,7 @@
     overflow:		hidden;
     font-size: 20px;
     margin: 8px;
-    width:		25%;
+    
 
 
     
@@ -54,8 +53,9 @@
     overflow:		hidden;
     font-size: 20px;
     margin: 8px;
-    width:		100%;
-    display: inline-block;
+    width: auto;
+    height: auto;
+    
 
 }
 .card-filled:hover{
@@ -78,10 +78,19 @@ img{
 	max-width:	100%;
 	max-height:	100%;
 }
+
 .grid-container{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 16px;
+ display: grid;
+ grid-template-columns: auto auto auto;
+ grid-gap: 16px;
+ height: auto;
+
+
+}
+.swiper {
     width: 100%;
-    height: 50%;
-   }
+    height: 25%;
+  }
+  .swiper-slide {
+    width: 30vw;
+  }
