--- a/UserListTable/main.css
+++ b/UserListTable/main.css
@@ -1,38 +1,34 @@
-@import url("components.css");
+
 *
    {
        box-sizing:		border-box;
+       margin:			0;
+       padding: 		0;
        line-height: 1.6;
        font-family: "B Koodak";
        outline: none;
-       margin-left:auto;
-       margin-right:auto;
-   }
-   body
+   }	
+body
     {
-        padding:		1em;
-        width:300px;
+
+        
         background: rgb(238,174,202);
         background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
-    html
+html
    {
        padding:		1em;
        font-size: 		16px;
       
    }
    form
-	{
-        background-color: whitesmoke;
-		box-sizing:		border-box;
-		width:300px;
-        border-radius:	20px; 
-		padding: 1em;
-		font-family: "b koodak";
-        font-size: 		16px;
-		
-	}	
-
+   {
+    background-color: rgba(245, 245, 245,50%);
+    border-radius: 20px;
+    padding:		1em;
+    font-size: 		16px;
+    width: 600px;
+   }
 :lang(fa)
    {
        direction: rtl;
@@ -45,7 +41,7 @@
        text-align: left;
        
    }
-input,textarea,button,label
+input:not([type='checkbox']),textarea,button
    {
        height: 		 48px;
        padding:		 16px;
@@ -55,26 +51,19 @@ input,textarea,button,label
        margin: 8px 8px 8px 8px;
        min-width:		 200px;
        max-width: 		 100%;
-       width: 90%;
                
-   }
-   input
-   {
-       background-color: silver;
-   }
-   h2
-   {
-       text-align: center;
-       padding:		 0 40px;
    }
 textarea
    {
        height: 6em;
+       width: 515px;
    }
-   
-	
-
-		
+img.thumbnail{
+    width: 64px;
+    height: 64px;
+    max-width: 64px;
+    max-height: 64px;
+}
 
 
            
