--- a/home/main.css
+++ b/home/main.css
@@ -10,8 +10,11 @@
    }	
 body
     {
+            background-image: url("assets/images/bg1.jpg");
+            overflow:auto;
+            float:inherit;
+            height:auto;
 
-        background: linear-gradient(#021d50, #3e77b8)
     }
 html
    {
@@ -59,6 +62,72 @@ textarea
    h1{
        color: white;
    }
+   p{
+       font-size: 20px;
+   }
+
+   .banner{
+    width :  85%;
+    height: 300px;
+    border-radius: 2em;
+    margin: 20px 8%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   
+   }
+
+   .banner_intro{
+    width:100%;
+    height:100%;
+    border-radius: 2em;
+   
+   }
+   .grid-container{
+    
+    grid-template-columns: auto auto auto;
+    grid-gap: 16px;
+    height: auto;
+   
+   
+   }
+   .container {
+    width:85%;
+    border-radius: 2em;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    padding: 20px;
+    margin-right: 8%;
+    margin-top: 8px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      
+  }
+  .home_text_counter{
+
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: -10px;
+    border-radius: 2em;
+    color: rgb(0, 0, 0);
+    }
+
+   .swiperB {
+       width: 85%;
+       height: 25%;
+     }
+   .swiper {
+       width: 85%;
+       height: 25%;
+     }
+   
+   
+   .swiper-slide {
+       width: 100vw;
+     }
+
+
+     
+
+
 
 
 
